# SDEV260-Team_Project

./: CMakeLists.txt  Makefile
BudgetManagement/: BudgetManagement.cpp  BudgetManagement.rc  BudgetManagement.sln  BudgetManagement.vcxproj  BudgetManagement.vcxproj.filters  Resource.h
include/: budget.h
src/: budget.cpp  main.cpp
